--- a/frontend/joy_tim/styles.css
+++ b/frontend/joy_tim/styles.css
@@ -15,6 +15,12 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.header.index{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .footer {
     position: fixed;
     bottom: 0;
@@ -48,6 +54,19 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     margin: 80px auto 80px;
+}
+
+.form-container.no-style{
+    background-color: transparent;
+    box-shadow: none;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    display: contents;
+}
+
+.form-container.no-style video{
+    width: 100%;
 }
 
 .hidden {
@@ -139,6 +158,8 @@ body {
     display: flex;
     justify-content: space-between;
 }
+
+.form-container
 
 details {
     background-color: #F5F5F5;
@@ -416,4 +437,62 @@ details[open] summary {
 
 a {
     text-decoration: none; /* no underline */
+}
+/* 彈窗背景 */
+.nav-modal {
+    display: none; /* 初始狀態為隱藏 */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); /* 半透明背景 */
+  }
+  
+  /* 彈窗內容 */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 中間對齊 */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* 可以根據需要調整大小 */
+    border-radius: 8px;
+  }
+  
+  /* 彈窗標題 */
+  .details-modal-title {
+    display: flex;
+    align-items: center;
+  }
+  
+  /* 彈窗內容 */
+  .details-modal-content {
+    margin-top: 10px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .alert{
+    position: absolute; /* 絕對定位 */
+    top: 20%;
+    left: 50%; /* 水平居中，根據 .form-container 的寬度 */
+    transform: translate(-50%, -50%); /* 調整元素位置，使其真正居中 */
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    max-width: 400px; /* 根據需要調整最大寬度 */
+    z-index: 10; /* 確保在其他內容上面 */
+    text-align: center; /* 使 alert 內容居中 */
+}
+
+.modal-content button{
+    display: none;
+}
+
+.alert span{
+    color: #d45251;
 }
